src/test/ui/issues/issue-72574-1.stderr
error: `_x @` is not allowed in a tuple
  --> $DIR/issue-72574-1.rs:4:14
   |
LL |         (_a, _x @ ..) => {}
   |              ^^^^^^^ this is only allowed in slice patterns
   |
   = help: remove this and bind each tuple field independently
help: if you don't need to use the contents of _x, discard the tuple's remaining fields
   |
LL |         (_a, ..) => {}
   |              ^^

error: aborting due to previous error

